smaller pictures in 'tableware' and 'paintings'

--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -110,6 +110,11 @@
   background-color: transparent;
   margin-top: 2%;
   margin-left: 2%;
+
+  @media screen and (max-width: $mq-phone) {
+    width: 50%;
+    height: 50%;
+  }
 }
 
 .hamburger {
