--- a/styles/galleries.scss
+++ b/styles/galleries.scss
@@ -41,8 +41,6 @@
 .hover-img:before,
 .hover-img:after {
     background-color: $color1;
-    border-top: 32px solid $color1;
-    border-bottom: 32px solid $color1;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -59,7 +57,6 @@
     vertical-align: top;
     width: 100%;
     height: 100%;
-    backface-visibility: hidden;
 
 }
 
@@ -71,12 +68,11 @@
     bottom: 0;
     left: 0;
     right: 0;
-    align-items: center;
+    // align-items: center;
     z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    // line-height: 1rem;
     opacity: 0;
     z-index: 2;
     transition-delay: 0.1s;
