--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -17,13 +17,14 @@
   @media screen and (max-width: $mq-phone) {
     flex-direction: column;
     justify-content: flex-start;
-    padding: 0 0 0 0;
+    padding-left: 5%;
 
   }
 
 
 
-  a:link {
+  a:link,
+  a {
     text-decoration: none;
   }
 
@@ -37,7 +38,6 @@
     height: 30%;
 
     flex: 0 0 400px;
-    text-decoration: none;
     transition: transform 1s ease;
 
 
@@ -51,11 +51,7 @@
       margin-top: 0;
       margin-bottom: 10%;
       color: black;
-
-      @media screen and (max-width: $mq-phone) {
-        margin-bottom: 10%;
-
-      }
+      width: 90vw;
     }
 
 
@@ -66,6 +62,7 @@
       width: 100%;
       height: 100%;
       border-radius: 25px;
+
 
       @media screen and (max-width: $mq-phone) {
         width: 90vw;
