--- a/styles/galleries.scss
+++ b/styles/galleries.scss
@@ -4,105 +4,115 @@
 .painting-gallery,
 .tableware-gallery,
 .other-gallery {
-    margin-top: 10%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: space-between;
+  margin-top: 10%;
+  display: flex;
+  //cross browser
+  display: -webkit-box;
+  display: -ms-flexbox;
+
+  flex-wrap: wrap;
+  -ms-flex-wrap: wrap; //cross browser
+  justify-content: space-evenly;
+  //cross browser
+  -webkit-box-pack: space-evenly;
+  -ms-flex-pack: space-evenly;
+  -ms-flex-line-pack: justify;
+  align-content: space-between;
 }
 
-
-
-
 .hover-img {
-    background-color: $color1;
-    color: #fff;
-    display: inline-block;
-    margin: 8px;
-    width: 40%;
-    height: 45%;
-    overflow: hidden;
-    position: relative;
-    text-align: center;
-    border-radius: 10%;
+  background-color: $color1;
+  color: #fff;
+  display: inline-block;
+  margin: 8px;
+  width: 40%;
+  height: 45%;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  border-radius: 10%;
 
-
-    @media screen and (max-width: $mq-tablet) {
-        width: 100%;
-    }
-
+  @media screen and (max-width: $mq-tablet) {
+    width: 100%;
+  }
 }
 
 .hover-img * {
-    box-sizing: border-box;
-    transition: all 0.45s ease;
+  box-sizing: border-box;
+  transition: all 0.45s ease;
 }
 
 .hover-img:before,
 .hover-img:after {
-    background-color: $color1;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    content: '';
-    transition: all 0.3s ease;
-    z-index: 1;
-    opacity: 0;
-    transform: scaleY(2);
+  background-color: $color1;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  content: '';
+  transition: all 0.3s ease;
+  z-index: 1;
+  opacity: 0;
+  transform: scaleY(2);
 }
 
 .hover-img img {
-    vertical-align: top;
-    width: 100%;
-    height: 100%;
-
+  vertical-align: top;
+  width: 100%;
+  height: 100%;
 }
 
 //show image description on hover
 
 .hover-img figcaption {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    // align-items: center;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    opacity: 0;
-    z-index: 2;
-    transition-delay: 0.1s;
-    font-size: 1.5rem;
-    font-family: sans-serif;
-    font-weight: 400;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    height: 100%;
-    overflow-y: scroll;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  // align-items: center;
+  z-index: 1;
+  display: flex;
+  //cross browser
+  display: -webkit-box;
+  display: -ms-flexbox;
+  flex-direction: column;
+  //cross browser
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  justify-content: flex-start;
+  //cross browser
+  -webkit-box-pack: start;
+  -ms-flex-pack: start;
+  opacity: 0;
+  z-index: 2;
+  transition-delay: 0.1s;
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  font-weight: 400;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .hover-img:hover:before,
 .hover-img:hover:after {
-    transform: scale(1);
-    opacity: 1;
+  transform: scale(1);
+  opacity: 1;
 }
 
-.hover-img:hover>img {
-    opacity: 0.7;
+.hover-img:hover > img {
+  opacity: 0.7;
 }
 
-.hover-img:focus>img {
-    opacity: 0;
+.hover-img:focus > img {
+  opacity: 0;
 }
 
 .hover-img:hover figcaption,
 .hover-img:focus figcaption {
-    opacity: 1;
-
-
-
+  opacity: 1;
 }
